# Deep-Learning-Methods

./: .gitignore  README.md  pyproject.toml
dl_base/: pyproject.toml
dl_base/src/dl_base/: __init__.py  data.py  eval_utils.py  runner.py  utils.py
project1_cinic10/: data.py  pyproject.toml  train.sh
project1_cinic10/configs/: custom_cnn.yaml  mobilenetv2.yaml  template.yaml
project1_cinic10/configs/custom_cnn/: completed_runs_cnn.txt  custom_cnn_aug_hf.yaml  custom_cnn_aug_hf_co.yaml  custom_cnn_aug_hf_rc.yaml  custom_cnn_aug_hf_rc_co.yaml  custom_cnn_aug_hf_rc_rot.yaml  custom_cnn_aug_hf_rc_rot_co.yaml  custom_cnn_aug_hf_rot.yaml  custom_cnn_aug_hf_rot_co.yaml  custom_cnn_aug_n.yaml  custom_cnn_aug_rc.yaml  custom_cnn_aug_rc_co.yaml  custom_cnn_aug_rc_rot.yaml  custom_cnn_aug_rc_rot_co.yaml  custom_cnn_aug_rot.yaml  custom_cnn_aug_rot_co.yaml  custom_cnn_bs1.yaml  custom_cnn_bs2.yaml  custom_cnn_bs3.yaml  custom_cnn_do1.yaml  custom_cnn_do2.yaml  custom_cnn_do3.yaml  custom_cnn_lr1.yaml  custom_cnn_lr2.yaml  custom_cnn_lr3.yaml  custom_cnn_wd1.yaml  custom_cnn_wd2.yaml  custom_cnn_wd3.yaml  run_all.py
project1_cinic10/configs/mobilenetv2/: mobilenetv2_aug_hf.yaml  mobilenetv2_aug_hf_co.yaml  mobilenetv2_aug_hf_rc.yaml  mobilenetv2_aug_hf_rc_co.yaml  mobilenetv2_aug_hf_rc_rot.yaml  mobilenetv2_aug_hf_rc_rot_co.yaml  mobilenetv2_aug_hf_rot.yaml  mobilenetv2_aug_hf_rot_co.yaml  mobilenetv2_aug_n.yaml  mobilenetv2_aug_rc.yaml  mobilenetv2_aug_rc_co.yaml  mobilenetv2_aug_rc_rot.yaml  mobilenetv2_aug_rc_rot_co.yaml  mobilenetv2_aug_rot.yaml  mobilenetv2_aug_rot_co.yaml  mobilenetv2_bs1.yaml  mobilenetv2_bs2.yaml  mobilenetv2_bs3.yaml  mobilenetv2_do1.yaml  mobilenetv2_do2.yaml  mobilenetv2_do3.yaml  mobilenetv2_lr1.yaml  mobilenetv2_lr2.yaml  mobilenetv2_lr3.yaml  mobilenetv2_wd1.yaml  mobilenetv2_wd2.yaml  mobilenetv2_wd3.yaml
project1_cinic10/configs/resnet20/: completed_runs_resnet20.txt  resnet20_aug_hf.yaml  resnet20_aug_hf_co.yaml  resnet20_aug_hf_rc.yaml  resnet20_aug_hf_rc_co.yaml  resnet20_aug_hf_rc_rot.yaml  resnet20_aug_hf_rc_rot_co.yaml  resnet20_aug_hf_rot.yaml  resnet20_aug_hf_rot_co.yaml  resnet20_aug_n.yaml  resnet20_aug_rc.yaml  resnet20_aug_rc_co.yaml  resnet20_aug_rc_rot.yaml  resnet20_aug_rc_rot_co.yaml  resnet20_aug_rot.yaml  resnet20_aug_rot_co.yaml  resnet20_bs1.yaml  resnet20_bs2.yaml  resnet20_bs3.yaml  resnet20_do1.yaml  resnet20_do2.yaml  resnet20_do3.yaml  resnet20_lr1.yaml  resnet20_lr2.yaml  resnet20_lr3.yaml  resnet20_wd1.yaml  resnet20_wd2.yaml  resnet20_wd3.yaml  run_all.py
project1_cinic10/experiments/: eval.py  few_shot.py  train.py  utils.py
project1_cinic10/models/: mobilenetv2.py  resnet20.py
project1_cinic10/src/project1_cinic10/: config.py  data.py
project2_speechcommands/: pyproject.toml
project2_speechcommands/configs/binary_classifier/: binary_cls_baseline.yaml  run_all.py
project3_catgen/: README.md  pyproject.toml
project3_catgen/configs/: template.yaml
project3_catgen/slurm/: README.md  bootstrap_project3_catgen.sh  dcgan_train_24h.sbatch  params.sh  rsync-results.sh  run-all.sh  run.sh  submit_dcgan_failsafe.sh  submit_dcgan_sweep.sh
project3_catgen/tests/: test_dcgan.py
(+73 files in other folders)
