[project]
name = "dl_base"
version = "0.1.0"
description = "Experiments framework for Deep Learning Methods"
readme = "README.md"
authors = [
    { name = "MaciasMucias", email = "maciej2.karaskiewicz@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
