[project]
name = "dl_base"
version = "0.1.0"
description = "Experiments framework for Deep Learning Methods"
readme = "README.md"
authors = [
    { name = "MaciasMucias", email = "maciej2.karaskiewicz@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
index = [
    { name = "pytorch-cu128", url = "https://download.pytorch.org/whl/cu128", explicit = true },
    { name = "pypi", url = "https://pypi.org/simple" },
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }